microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: xyna.localhost
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-microservice
            port:
              number: 8001
